<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LoanWallet</string>
    <string name="AddLoan">+</string>
    <string name="tagISBN">ISBN:</string>
    <string name="tagTitulo">Título:</string>
    <string name="tagAutores">Autores:</string>
    <string name="tagAno">Año:</string>
    <string name="tagEditorial">Editorial:</string>
    <string name="tagFinPrestamo">Fecha de Finalización del Préstamo:</string>
    <string name="tagLugarPrestamo">Establecimiento Prestamista:</string>
    <string name="tagDirector">Director:</string>
    <string name="tagDuracion">Duración:</string>
    <string name="tagMIN">min</string>
    <string name="tagGenero">Genero:</string>
    <string name="btnCancel">Cancelar</string>
    <string name="btnOK">Aceptar</string>
    <string name="btnAddLibro">Añadir Libro</string>
    <string name="btnAddPelicula">Añadir Pelicula</string>
    <string name="btnModificarLibro">Modificar Libro</string>
    <string name="btnModificarPelicula">Modificar Película</string>
    <string name="calendar">calendar</string>
    <string name="btnLibros">Libros</string>
    <string name="btnPeliculas">Películas</string>
    <string name="labelMenuNuevoPrestamo">Nuevo Prestamo</string>
    <string name="labelMainSubMenuLibro">Libro</string>
    <string name="labelMainSubMenuPelicula">Pelicula</string>
    <string name="labelMenuBorrarDatos">Borrar Datos</string>
    <string name="labelMenuAtras">Atrás</string>
</resources>
