<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="5dp"
              android:paddingBottom="10dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:baselineAligned="false"
            android:paddingLeft="10dp" android:paddingRight="10dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0.8" android:layout_gravity="center">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tagTitulo"
                    android:id="@+id/tagTitulo"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_gravity="center"
                android:layout_margin="5dp">
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/labelTituloPelicula"
                android:maxLength="200"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:baselineAligned="false"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp">
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.8"
                      android:layout_gravity="center">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/tagDirector"
                      android:id="@+id/tagDirector"
                      android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                      android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.25" android:layout_gravity="center"
        >
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/labelDirectorPelicula"
                android:maxLength="200"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:layout_gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tagGenero"
                android:id="@+id/tagGenero"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:layout_gravity="center" >

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/labelGeneroPelicula"
                android:maxLength="200"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:baselineAligned="false"
                  android:paddingLeft="10dp" android:paddingRight="10dp">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:layout_weight="0.8" android:layout_gravity="center">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/tagAno" android:id="@+id/tagAno"
                      android:textSize="20sp" android:textAppearance="?android:attr/textAppearanceLarge"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:layout_weight="0.2" android:layout_gravity="center"
        >
            <EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:id="@+id/labelAnoPelicula" android:inputType="number" android:layout_gravity="center"
                      android:numeric="integer" android:maxLength="4"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:layout_gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tagDuracion"
                android:id="@+id/textView"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_gravity="center" >

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/labelDuracionPelicula"
                android:layout_gravity="center"
                android:numeric="integer"
                android:maxLength="3"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:layout_gravity="center"
            android:paddingLeft="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tagMIN"
                android:id="@+id/textView2"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:paddingLeft="10dp" android:paddingRight="10dp"
            android:paddingTop="5dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/tagFinPrestamo" android:id="@+id/tagFinPrestamo"
                  android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                  android:textSize="20sp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/labelFinPrestamoPelicula"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.6" />
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/calendar" android:src="@mipmap/calendar"
                    android:contentDescription="@string/calendar"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:paddingLeft="10dp" android:paddingRight="10dp"
                  android:paddingTop="5dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/tagLugarPrestamo" android:id="@+id/tagLugarPrestamo"
                  android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                  android:textIsSelectable="false" android:textSize="20sp"/>
        <EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:ems="10" android:id="@+id/labelLugarPrestamoPelicula" android:clickable="true" android:inputType="text"
            android:maxLength="80" />
    </LinearLayout>

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:paddingLeft="10dp" android:paddingRight="10dp"
                  android:paddingTop="5dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnModificarPelicula"
                android:id="@+id/btnModificarPelicula" android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>